correct horizontal scroll issue on endorsements

--- a/src/sass/partials/_csr-policy.scss
+++ b/src/sass/partials/_csr-policy.scss
@@ -456,6 +456,7 @@
 
     .scroll {
       flex-shrink: 1;
+      overflow-x: hidden;
 
       .flex-child.col3 {
         width: 50%;
